2017-08-16  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/81116
	* gfortran.dg/realloc_on_assignment_29.f90:  New test.

2017-08-16  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46091
	* gcc.target/i386/pr46091-1.c: Update scan-assembler-times.
	(testm): New test function.
	* gcc.target/i386/pr46091-2.c: Ditto.
	* gcc.target/i386/pr46091-3.c: Ditto.

2017-08-16  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/81832
	* gcc.dg/tree-ssa/pr81832.c: New test.

2017-08-16  Richard Sandiford  <richard.sandiford@linaro.org>

	PR tree-optimization/81835
	* gcc.dg/vect/pr81815.c: New test.

2017-08-15  Joseph Myers  <joseph@codesourcery.com>

	PR target/78460
	PR target/67712
	* gcc.c-torture/compile/string-large-1.c: New test.

2017-08-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81790
	* gcc.dg/torture/pr81790.c: New testcase.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* c-c++-common/attr-nonstring-1.c: New test.

2017-08-14  Martin Sebor  <msebor@redhat.com>

	PR c/81117
	* gcc.dg/format/gcc_diag-10.c: Exercise %G.

2017-08-14  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.dg/ucnid-5.c: Skip on AIX.
	* gcc.target/powerpc/pr79909.c: Skip on AIX.

2017-08-14  Uros Bizjak  <ubizjak@gmail.com>

	PR target/46091
	* gcc.target/i386/pr46091-1.c: New test.
	* gcc.target/i386/pr46091-2.c: Ditto.
	* gcc.target/i386/pr46091-3.c: Ditto.

2017-08-14  Wilco Dijkstra  <wdijkstr@arm.com>

	PR target/81643
	* gcc.target/aarch64/long_branch_1.c: Improve testcase.

2017-08-14  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/79845
	* g++.dg/ext/altivec-cell-5.C: Adjust diagnostic strings.
	* gcc.target/powerpc/altivec-cell-5.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-eq-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-gt-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-lt-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-cmp-exp-unordered-2.c: Likewise.
	* gcc.target/powerpc/bfp/scalar-extract-exp-1.c: Likewise.